# imgui-template-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: DistrhoPluginInfo.h  PluginDSP.cpp  PluginUI.cpp
